[gd_scene load_steps=13 format=3 uid="uid://8kx2wsgj8fkj"]

[ext_resource type="Script" uid="uid://d3d2j01jys1vl" path="res://goomba_de_dialogo.gd" id="1_k6s4o"]
[ext_resource type="Texture2D" uid="uid://cbhsmap31lkib" path="res://scenes/characters/Enemies/Goomba/Goomba_exportable.png" id="2_o1ea3"]
[ext_resource type="AudioStream" uid="uid://bvirsufk4ac1l" path="res://assets/sounds/Super Mario Party Goomba Voice Clips.mp3" id="3_o1ea3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k6s4o"]
size = Vector2(50.6667, 31.3333)

[sub_resource type="AtlasTexture" id="AtlasTexture_kutuy"]
atlas = ExtResource("2_o1ea3")
region = Rect2(1, 61, 18, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_44nq1"]
atlas = ExtResource("2_o1ea3")
region = Rect2(19, 61, 18, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1qap"]
atlas = ExtResource("2_o1ea3")
region = Rect2(37, 61, 18, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_fr760"]
atlas = ExtResource("2_o1ea3")
region = Rect2(55, 61, 18, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_tu8ob"]
atlas = ExtResource("2_o1ea3")
region = Rect2(73, 61, 18, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_5qy1g"]
atlas = ExtResource("2_o1ea3")
region = Rect2(1, 61, 18, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_ji880"]
atlas = ExtResource("2_o1ea3")
region = Rect2(1, 81, 18, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_tu8ob"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kutuy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_44nq1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1qap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fr760")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tu8ob")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5qy1g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ji880")
}],
"loop": true,
"name": &"talk",
"speed": 3.0
}]

[node name="Goomba de dialogo" type="Area2D"]
scale = Vector2(3, 3)
script = ExtResource("1_k6s4o")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.33333, -5.66667)
shape = SubResource("RectangleShape2D_k6s4o")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_tu8ob")
frame_progress = 0.635307

[node name="Noise" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_o1ea3")
attenuation = 0.594603
parameters/looping = true

[node name="Timer" type="Timer" parent="."]
ignore_time_scale = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
